Added WIP replica of October UR R2 prototype

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -9,3 +9,7 @@
 
 .govuk-width-container { @include govuk-width-container; }
 
+// Patterns not in Frontend
+
+@import "components/heading-search";
+
