--- a/app/views/oct24-ur-r2/service-1.html
+++ b/app/views/oct24-ur-r2/service-1.html
@@ -7,10 +7,10 @@
 {% block content %}
 
 <div class="govuk-grid-row"> 
-  <div class="govuk-grid-column-two-thirds">  
+  <div class="govuk-grid-column-full">  
 
-    <span class="govuk-caption-xl">Service</span>
-    <h1 class="govuk-heading-xl">National Tutoring Programme</h1>
+    <span class="govuk-caption-l">Team</span>
+    <h1 class="govuk-heading-l">School census</h1>
 
     {{ govukTable({
       captionClasses: "govuk-table__caption--m",
@@ -66,7 +66,7 @@
             text: "Service name"
           },
           value: {
-            html: "National Tutoring Programme"
+            html: "School census"
           },
           actions: {
             items: [
@@ -80,7 +80,7 @@
             text: "Service acronym"
           },
           value: {
-            html: "NTP"
+            html: "No acronym added"
           },
           actions: {
             items: [
@@ -95,7 +95,7 @@
             text: "Digital service link"
           },
           value: {
-            html: '<a href=" https://www.gov.uk/government/collections/national-tutoring-programme-funding"> https://www.gov.uk/government/collections/national-tutoring-programme-funding</a>'
+            html: '<a href="https://www.gov.uk/guidance/school-census"> https://www.gov.uk/guidance/school-census</a>'
           }
         },
 
@@ -104,7 +104,7 @@
             text: "Description"
           },
           value: {
-            html: "Understand how to arrange tutoring, including calculating how much you’ll pay, and how to record and report on your tutoring."
+            html: "Academy trusts must comply with this handbook as a condition of their funding agreement."
           },
           actions: {
             items: [
@@ -118,7 +118,7 @@
             text: "Group"
           },
           value: {
-            html: "DfE"
+            html: "Operations and Infrastructure"
           },
           actions: {
             items: [
