--- a/app/views/oct24-ur-r2/services.html
+++ b/app/views/oct24-ur-r2/services.html
@@ -7,7 +7,7 @@
 <div class="govuk-grid-row"> 
   <div class="govuk-grid-column-full">  
 
-    <h1 class="govuk-heading-xl">Services</h1>
+    <h1 class="govuk-heading-l">Teams</h1>
 
     {{ govukTable({
       captionClasses: "govuk-table__caption--m",
@@ -30,7 +30,7 @@
       rows: [
         [
           {
-            html: '<a href="service-1">	National Tutoring Programme</a>'
+            html: '<a href="service-1">	School census</a>'
           },
           {
             html: ' <strong class="govuk-tag govuk-tag--green">
@@ -38,7 +38,7 @@
             </strong>'
           },
           {
-            text: "ESFA"
+            text: "Operations and Infrastructure"
           },
           {
             text: "13 Oct 2024"
@@ -102,7 +102,7 @@
             </strong>'
           },
           {
-            text: "Operations and Infrastructure group"
+            text: "Operations and Infrastructure"
           },
           {
             text: "20 Sep 2024"
