--- a/app/views/layouts/_SUBTASK.html
+++ b/app/views/layouts/_SUBTASK.html
@@ -10,9 +10,233 @@
 {% endif %}
 {% endblock %}  
 
-{% block content %}
+{% block content %} 
 <div class="govuk-grid-row"> 
-<div class="govuk-grid-column-two-thirds">  
+    <div class="govuk-grid-column-full">  
+
+    <span class="govuk-caption-l">Task</span>
+    <h1 class="govuk-heading-l">{{ pageHeading }}</h1>
+
+    {% if draft %}
+
+    {{ govukTable({
+      captionClasses: "govuk-table__caption--m",
+      firstCellIsHeader: true,
+      head: [
+        {
+          text: "Status",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Actions",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Last updated",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Audit trail",
+          classes: "govuk-!-width-one-quarter"
+        }
+      ],
+      rows: [
+        [
+          {
+            html: '<strong class="govuk-tag govuk-tag--yellow">
+              Draft
+            </strong>'
+          },
+          {
+            html: '<p><a href="edit-subtask-1">Edit task</a></p><p><a href="edit-task-1">Request to archive</a></p>'
+          },
+          {
+            text: "13 Oct 2024"
+          },
+          {
+            html: '<a href="">View history</a>'
+          }
+        ]
+      ]
+    }) }}
+
+    {% elseif published %}
+
+    {{ govukTable({
+      captionClasses: "govuk-table__caption--m",
+      firstCellIsHeader: true,
+      head: [
+        {
+          text: "Status",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Actions",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Last updated",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Audit trail",
+          classes: "govuk-!-width-one-quarter"
+        }
+      ],
+      rows: [
+        [
+          {
+            html: '<strong class="govuk-tag govuk-tag--green">
+              Published
+            </strong>'
+          },
+          {
+            html: '<p><a href="edit-subtask-1">Edit task</a></p><p><a href="edit-task-1">Request to archive</a></p>'
+          },
+          {
+            text: "13 Oct 2024"
+          },
+          {
+            html: '<a href="">View history</a>'
+          }
+        ]
+      ]
+    }) }}
+
+    {% elseif archived %}
+
+    {{ govukTable({
+      captionClasses: "govuk-table__caption--m",
+      firstCellIsHeader: true,
+      head: [
+        {
+          text: "Status",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Actions",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Last updated",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Audit trail",
+          classes: "govuk-!-width-one-quarter"
+        }
+      ],
+      rows: [
+        [
+          {
+            html: '<strong class="govuk-tag govuk-tag--red">
+              Archived
+            </strong>'
+          },
+          {
+            html: '<p><a href="edit-subtask-1">Edit task</a></p><p><a href="edit-task-1">Request to archive</a></p>'
+          },
+          {
+            text: "13 Oct 2024"
+          },
+          {
+            html: '<a href="">View history</a>'
+          }
+        ]
+      ]
+    }) }}
+
+    {% elseif decomissioned %}
+
+    {{ govukTable({
+      captionClasses: "govuk-table__caption--m",
+      firstCellIsHeader: true,
+      head: [
+        {
+          text: "Status",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Actions",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Last updated",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Audit trail",
+          classes: "govuk-!-width-one-quarter"
+        }
+      ],
+      rows: [
+        [
+          {
+            html: '<strong class="govuk-tag govuk-tag--red">
+                Decomissioned
+            </strong>'
+          },
+          {
+            html: '<p><a href="edit-subtask-1">Edit task</a></p><p><a href="edit-task-1">Request to archive</a></p>'
+          },
+          {
+            text: "13 Oct 2024"
+          },
+          {
+            html: '<a href="">View history</a>'
+          }
+        ]
+      ]
+    }) }}
+
+    {% elseif queued %}
+
+    {{ govukTable({
+      captionClasses: "govuk-table__caption--m",
+      firstCellIsHeader: true,
+      head: [
+        {
+          text: "Status",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Actions",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Last updated",
+          classes: "govuk-!-width-one-quarter"
+        },
+        {
+          text: "Audit trail",
+          classes: "govuk-!-width-one-quarter"
+        }
+      ],
+      rows: [
+        [
+          {
+            html: '<strong class="govuk-tag govuk-tag--blue">
+                Queued
+            </strong>'
+          },
+          {
+            html: '<a href="edit-subtask-1">Request a change</a>'
+          },
+          {
+            text: "13 Oct 2024"
+          },
+          {
+            html: '<a href="">View history</a>'
+          }
+        ]
+      ]
+    }) }}
+{% endif %}
+
+
+
+     
+
 <!-- start of service specific block -->
 {% block service %}
 Text goes here, override this by overriding the block
