Amends to UR R2 version

--- a/app/views/oct24-ur-r2/service-1.html
+++ b/app/views/oct24-ur-r2/service-1.html
@@ -53,11 +53,18 @@
       ]
     }) }}
 
-
     {{ govukSummaryList({
       card: {
         title: {
-          text: "Task details"
+          text: "Team details"
+        },
+        actions: {
+          items: [
+            {
+              href: "#",
+              text: "View content pages and tasks"
+            }
+          ]
         }
       },
       rows: [
