--- a/app/views/oct24-ur-r2/homepage.html
+++ b/app/views/oct24-ur-r2/homepage.html
@@ -56,7 +56,7 @@
 
 
 
-    <h2 class="govuk-heading-l">Upcoming this month</h2>
+    <h2 class="govuk-heading-m">Upcoming this month</h2>
 
     <p class="govuk-body">These are your tasks for school business professionals this month.</p>
 
@@ -142,7 +142,7 @@
 
 
 
-    <h2 class="govuk-heading-l">Your change requests</h2>
+    <h2 class="govuk-heading-m">Your change requests</h2>
 
     <p class="govuk-body">Pending requests for new tasks or changes made by you or a member of your team.</p>
     
