--- a/app/views/oct24-ur-r2/subtask-1.html
+++ b/app/views/oct24-ur-r2/subtask-1.html
@@ -130,7 +130,7 @@
       actions: {
         items: [
           {
-            href: "service-1",
+            href: "task-1",
             text: "View",
             visuallyHiddenText: "whether details are known"
           }
@@ -153,7 +153,7 @@
       actions: {
         items: [
           {
-            href: "#",
+            href: "task-1",
             text: "View",
             visuallyHiddenText: "relationship to lead tenant"
           }
