Added additional flows and routing for radios

--- a/app/views/oct24-ur-r2/edit-task-1.html
+++ b/app/views/oct24-ur-r2/edit-task-1.html
@@ -9,8 +9,8 @@
 <div class="govuk-grid-row"> 
     <div class="govuk-grid-column-two-thirds">  
   
-      <span class="govuk-caption-xl">School census details</span>
-      <h1 class="govuk-heading-xl">Edit DFE Connect page</h1>
+      <span class="govuk-caption-l">School census details</span>
+      <h1 class="govuk-heading-l">Edit DFE Connect page</h1>
 
 {{ govukInput({
     label: {
