--- a/app/views/oct24-ur-r2/service-1.html
+++ b/app/views/oct24-ur-r2/service-1.html
@@ -41,7 +41,7 @@
             </strong>'
           },
           {
-            html: '<a href="edit-service-1">Edit service</a>'
+            html: '<a href="edit-service-1">Edit team</a>'
           },
           {
             text: "13 Oct 2024"
@@ -61,7 +61,7 @@
         actions: {
           items: [
             {
-              href: "#",
+              href: "task-1",
               text: "View content pages and tasks"
             }
           ]
