--- a/app/views/oct24-ur-r2/services.html
+++ b/app/views/oct24-ur-r2/services.html
@@ -46,23 +46,7 @@
         ],
         [
           {
-            html: '<a href="">Check if you need an Academic Technology Approval Scheme certificate</a>'
-          },
-          {
-            html: ' <strong class="govuk-tag govuk-tag--red">
-              Decommissioned
-            </strong>'
-          },
-          {
-            text: "Regions group"
-          },
-          {
-            text: "9 Oct 2024"
-          }
-        ],
-        [
-          {
-            html: '<a href="">Register trainee teachers</a>'
+            html: '<a href="">Workforce census</a>'
           },
           {
             html: ' <strong class="govuk-tag govuk-tag--green">
@@ -70,42 +54,10 @@
             </strong>'
           },
           {
-            text: "ESFA"
-          },
-          {
-            text: "2 Oct 2024"
-          }
-        ],
-        [
-          {
-            html: '<a href="">Explore education statistics</a>'
-          },
-          {
-            html: ' <strong class="govuk-tag govuk-tag--yellow">
-              Draft
-            </strong>'
-          },
-          {
-            text: "ESFA"
-          },
-          {
-            text: "28 Sep 2024"
-          }
-        ],
-        [
-          {
-            html: '<a href="">Analyse school performance</a>'
-          },
-          {
-            html: ' <strong class="govuk-tag govuk-tag--blue">
-              Due to be commissioned
-            </strong>'
-          },
-          {
             text: "Operations and Infrastructure"
           },
           {
-            text: "20 Sep 2024"
+            text: "5 Jan 2024"
           }
         ]
       ]
