--- a/app/views/oct24-ur-r2/task-1.html
+++ b/app/views/oct24-ur-r2/task-1.html
@@ -10,6 +10,8 @@
 
 
 
+
+
     {{ govukSummaryList({
       card: {
         title: {
@@ -51,14 +53,7 @@
             text: "Tasks"
           },
           value: {
-            html: "<p>Complete your autumn school census return</p>
-            <p>Check the school census guidance for any changes</p>
-            <p>Amend your autumn school census data, if needed</p>
-            <p>Complete your spring school census return</p>
-            <p>Amend your spring school census data, if needed</p>
-            <p>Complete your summer school census return</p>
-            <p>Check the school census guidance for any changes</p>
-            <p>Amend your summer school census data, if needed</p>"
+            html: "Complete your autumn school census return"
           },
           actions: {
             items: [
@@ -66,6 +61,125 @@
                 href: "subtask-1",
                 text: "View",
                 visuallyHiddenText: "name"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: ""
+          },
+          value: {
+            html: 'Check the school census guidance for any changes'
+          },
+          actions: {
+            items: [
+              {
+                href: "",
+                text: "View",
+                visuallyHiddenText: "relationship to lead tenant"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: ""
+          },
+          value: {
+            html: 'Amend your autumn school census data, if needed'
+          },
+          actions: {
+            items: [
+              {
+                href: "",
+                text: "View",
+                visuallyHiddenText: "relationship to lead tenant"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: ""
+          },
+          value: {
+            html: 'Complete your spring school census return'
+          },
+          actions: {
+            items: [
+              {
+                href: "",
+                text: "View",
+                visuallyHiddenText: "relationship to lead tenant"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: ""
+          },
+          value: {
+            html: 'Amend your spring school census data, if needed'
+          },
+          actions: {
+            items: [
+              {
+                href: "",
+                text: "View",
+                visuallyHiddenText: "relationship to lead tenant"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: ""
+          },
+          value: {
+            html: 'Complete your summer school census return'
+          },
+          actions: {
+            items: [
+              {
+                href: "",
+                text: "View",
+                visuallyHiddenText: "relationship to lead tenant"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: ""
+          },
+          value: {
+            html: 'Check the school census guidance for any changes'
+          },
+          actions: {
+            items: [
+              {
+                href: "",
+                text: "View",
+                visuallyHiddenText: "relationship to lead tenant"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: ""
+          },
+          value: {
+            html: 'Amend your summer school census data, if needed'
+          },
+          actions: {
+            items: [
+              {
+                href: "",
+                text: "View",
+                visuallyHiddenText: "relationship to lead tenant"
               }
             ]
           }
