--- a/app/views/oct24-ur-r2/subtask-1.html
+++ b/app/views/oct24-ur-r2/subtask-1.html
@@ -113,6 +113,7 @@
       ]
     }) }}
 
+
 {{ govukSummaryList({
   card: {
     title: {
@@ -142,13 +143,92 @@
         text: "Other tasks on page"
       },
       value: {
-        html: '<p>Check the school census guidance for any changes</p>
-            <p>Amend your autumn school census data, if needed</p>
-            <p>Complete your spring school census return</p>
-            <p>Amend your spring school census data, if needed</p>
-            <p>Complete your summer school census return</p>
-            <p>Check the school census guidance for any changes</p>
-            <p>Amend your summer school census data, if needed</p>'
+        html: 'Check the school census guidance for any changes'
+      },
+      actions: {
+        items: [
+          {
+            href: "task-1",
+            text: "View",
+            visuallyHiddenText: "relationship to lead tenant"
+          }
+        ]
+      }
+    },
+    {
+      key: {
+        text: ""
+      },
+      value: {
+        html: 'Complete your spring school census return'
+      },
+      actions: {
+        items: [
+          {
+            href: "task-1",
+            text: "View",
+            visuallyHiddenText: "relationship to lead tenant"
+          }
+        ]
+      }
+    },
+    {
+      key: {
+        text: ""
+      },
+      value: {
+        html: 'Amend your spring school census data, if needed'
+      },
+      actions: {
+        items: [
+          {
+            href: "task-1",
+            text: "View",
+            visuallyHiddenText: "relationship to lead tenant"
+          }
+        ]
+      }
+    },
+    {
+      key: {
+        text: ""
+      },
+      value: {
+        html: 'Complete your summer school census return'
+      },
+      actions: {
+        items: [
+          {
+            href: "task-1",
+            text: "View",
+            visuallyHiddenText: "relationship to lead tenant"
+          }
+        ]
+      }
+    },
+    {
+      key: {
+        text: ""
+      },
+      value: {
+        html: 'Check the school census guidance for any changes'
+      },
+      actions: {
+        items: [
+          {
+            href: "task-1",
+            text: "View",
+            visuallyHiddenText: "relationship to lead tenant"
+          }
+        ]
+      }
+    },
+    {
+      key: {
+        text: ""
+      },
+      value: {
+        html: 'Amend your summer school census data, if needed'
       },
       actions: {
         items: [
