Updated routing for editing date on a sub task

--- a/app/views/layouts/_BASE.html
+++ b/app/views/layouts/_BASE.html
@@ -84,7 +84,7 @@
 {% endblock %}    
 
 {% block beforeContent %}
-{{ govukPhaseBanner({  tag: {    text: "beta"  },  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'}) }}
+{{ govukPhaseBanner({  tag: {    text: "Beta"  },  html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>.'}) }}
  
 
 {% if back %}
