--- a/app/views/layouts/_SUBTASK.html
+++ b/app/views/layouts/_SUBTASK.html
@@ -3,11 +3,12 @@
 {% extends "layouts/_BASE.html" %}  
 
 {% block beforeContent %}
-{{ govukPhaseBanner({  tag: {    text: "beta"  },  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'}) }}
+{{ govukPhaseBanner({  tag: {    text: "Beta"  },  html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>.'}) }}
   
 {% if back %}
 <a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endif %}
+
 {% endblock %}  
 
 {% block content %} 
