--- a/app/views/oct24-ur-r2/homepage.html
+++ b/app/views/oct24-ur-r2/homepage.html
@@ -45,7 +45,7 @@
           "altText": "Sample Image",
           "headingLevel": "3",
           "linkCard": true,
-          "link": "#",
+          "link": "requests",
           "openInNewTab": false,
           "heading": "Your pending requests",
           "description": "View your requests that you've sent for review.",
