--- a/app/views/nov24-ur-r3/create-subtask/check-your-answers.html
+++ b/app/views/nov24-ur-r3/create-subtask/check-your-answers.html
@@ -39,6 +39,17 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
+            Team
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {{ data['subTaskTeam'] }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> description</span></a>
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
             Link
           </dt>
           <dd class="govuk-summary-list__value">
