--- a/app/views/nov24-ur-r3/publish-and-review-details.html
+++ b/app/views/nov24-ur-r3/publish-and-review-details.html
@@ -79,7 +79,7 @@
   },
   items: [
     {
-      value: "soon",
+      value: "As soon as possible",
       text: "As soon as possible"
     },
     {
